--- a/index.html
+++ b/index.html
@@ -1,12 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave Responsive Design | Md Mobasshir Ahmed</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
-    
+
+<body class="font-family">
+    <header>
+        <nav>
+            <h2 class="logo"><span>Tech</span><span>Wave</span> </h2>
+            <ul>
+                <li>About</li>
+                <li>Episodes</li>
+                <li>Host</li>
+            </ul>
+            <button class="btn">subscribe<i class="fa-solid fa-arrow-right-long"></i></button>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="hero">
+                <div>
+                    <p>NEW</p>
+                    <img src="./assets/hero-circle.png" alt="">
+                    <img src="./assets/microphone.png" alt="">
+                </div>
+                <div>
+                    <h1>TechWave</h1>
+                    <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                    <button class="btn"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
+                    <button><img src="./assets/message.png" alt=""> Subscribe</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <h2>About the Podcast</h2>
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                We break down complex topics into digestible insights, explore productivity strategies that actually
+                work,
+                and share stories of personal growth from industry leaders.
+                <br><br>
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+            </p>
+            <div class="cards">
+                <div class="card">
+                    <h2>150K+</h2>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h2>150K+</h2>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h2>150K+</h2>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card">
+                    <h2>150K+</h2>
+                    <p>Monthly Listeners</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="chooss">
+            <h2>Why Choose TechWave</h2>
+            <div class="choose-cards">
+                <div class="choose card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+                <div class="choose card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+                <div class="choose card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+                <div class="choose card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+                <div class="choose card">
+                    <img src="./assets/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="featured&host">
+            <div class="featured">
+            <h2>Featured Episodes</h2>
+            <div class="episodes">
+                <div class="epi-card">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3>The Future of AI in Everyday Life</h3>
+                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in
+                        the next decade.</p>
+
+                        <div class="time">
+                            <img src="./assets/clock.png" alt="">
+                            <p>42 min</p>
+                        </div>
+                </div>
+                 <div class="epi-card">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3>The Future of AI in Everyday Life</h3>
+                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in
+                        the next decade.</p>
+
+                        <div class="time">
+                            <img src="./assets/clock.png" alt="">
+                            <p>42 min</p>
+                        </div>
+                </div>
+                 <div class="epi-card">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h3>The Future of AI in Everyday Life</h3>
+                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in
+                        the next decade.</p>
+
+                        <div class="time">
+                            <img src="./assets/clock.png" alt="">
+                            <p>42 min</p>
+                        </div>
+                </div>
+            </div>
+            </div>
+
+            <div class="host">
+                <h2>Meet the Host</h2>
+                <div class="host-details">
+                    <img src="./assets/host.png" alt="">
+                    <div class="alex">
+                        <h2>Alex Kumar</h2>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <div class="social">
+                            <img src="./assets/linkedin.png" alt="">
+                            <img src="./assets/x.png" alt="">
+                            <img src="./assets/instagram.png"
+                             alt="">
+                             <img src="./assets/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer">
+            <h2 class="logo"><Span>Tech</Span><span>Wave</span></h2>
+            <div class="footer-icons">
+                <div class="footer-icon">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="footer-icon">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="footer-icon">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="footer-icon">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+            </div>
+            <p>© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
+
 </html>
