nav bar style done and working for hero section

--- a/index.html
+++ b/index.html
@@ -14,36 +14,45 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
+
 </head>
 
 <body class="font-family">
     <header>
         <nav>
-            <h2 class="logo"><span>Tech</span><span>Wave</span> </h2>
+            <h2 class="logo"><span class="wht">Tech</span><span class="clr">Wave</span> </h2>
             <ul>
-                <li>About</li>
-                <li>Episodes</li>
-                <li>Host</li>
+                <a href="">
+                    <li>About</li>
+                </a>
+                <a href="">
+                    <li>Episodes</li>
+                </a>
+                <a href="">
+                    <li>Host</li>
+                </a>
             </ul>
             <button class="btn">subscribe<i class="fa-solid fa-arrow-right-long"></i></button>
         </nav>
-    </header>
-    <main>
-        <section>
-            <div class="hero">
-                <div>
+        <section class="hero">
+            <div class="hero1">
+                <div class="hero-img">
                     <p>NEW</p>
-                    <img src="./assets/hero-circle.png" alt="">
-                    <img src="./assets/microphone.png" alt="">
+                    <img class="circle" src="./assets/hero-circle.png" alt="">
+                    <img class="micro" src="./assets/microphone.png" alt="">
                 </div>
-                <div>
+                <div class="hero-txt">
                     <h1>TechWave</h1>
                     <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
-                    <button class="btn"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
-                    <button><img src="./assets/message.png" alt=""> Subscribe</button>
+                    <div class="hero-btn"><button class="btn"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
+                    <button class="btn-2"><img src="./assets/message.png" alt=""> Subscribe</button></div>
                 </div>
             </div>
         </section>
+    </header>
+
+    <main>
+
 
         <section class="about">
             <h2>About the Podcast</h2>
@@ -117,42 +126,57 @@
 
         <section class="featured&host">
             <div class="featured">
-            <h2>Featured Episodes</h2>
-            <div class="episodes">
-                <div class="epi-card">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h3>The Future of AI in Everyday Life</h3>
-                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in
-                        the next decade.</p>
+                <h2>Featured Episodes</h2>
+                <div class="episodes">
+                    <div class="epi-card">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h3>The Future of AI in Everyday Life</h3>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect
+                            in
+                            the next decade.</p>
 
                         <div class="time">
                             <img src="./assets/clock.png" alt="">
                             <p>42 min</p>
                         </div>
-                </div>
-                 <div class="epi-card">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h3>The Future of AI in Everyday Life</h3>
-                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in
-                        the next decade.</p>
+                    </div>
+                    <div class="epi-card">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h3>The Future of AI in Everyday Life</h3>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect
+                            in
+                            the next decade.</p>
 
                         <div class="time">
                             <img src="./assets/clock.png" alt="">
                             <p>42 min</p>
                         </div>
-                </div>
-                 <div class="epi-card">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h3>The Future of AI in Everyday Life</h3>
-                    <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in
-                        the next decade.</p>
+                    </div>
+                    <div class="epi-card">
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h3>The Future of AI in Everyday Life</h3>
+                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect
+                            in
+                            the next decade.</p>
 
                         <div class="time">
                             <img src="./assets/clock.png" alt="">
                             <p>42 min</p>
                         </div>
+                    </div>
                 </div>
-            </div>
             </div>
 
             <div class="host">
@@ -161,13 +185,15 @@
                     <img src="./assets/host.png" alt="">
                     <div class="alex">
                         <h2>Alex Kumar</h2>
-                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
+                            industry for over 10 years, working with startups and Fortune 500 companies. Through
+                            TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
+                            to grow in tech.</p>
                         <div class="social">
                             <img src="./assets/linkedin.png" alt="">
                             <img src="./assets/x.png" alt="">
-                            <img src="./assets/instagram.png"
-                             alt="">
-                             <img src="./assets/youtube.png" alt="">
+                            <img src="./assets/instagram.png" alt="">
+                            <img src="./assets/youtube.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -178,7 +204,7 @@
 
     <footer>
         <div class="footer">
-            <h2 class="logo"><Span>Tech</Span><span>Wave</span></h2>
+            <h2 class="logo"><Span class="wht">Tech</Span><span class="clr">Wave</span></h2>
             <div class="footer-icons">
                 <div class="footer-icon">
                     <img src="./assets/spotify.png" alt="">
