--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                 <div class="hero-txt">
                     <h1>TechWave</h1>
                     <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
-                    <div class="hero-btn"><button class="btn"><img src="./assets/spotify.png" alt="">Listen on Spotify</button>
-                    <button class="btn-2"><img src="./assets/message.png" alt=""> Subscribe</button></div>
+                    <div class="hero-btn"><button class="btn"><img src="./assets/spotify.png" alt="">Listen on
+                            Spotify</button>
+                        <button class="btn-2"><img src="./assets/message.png" alt=""> Subscribe</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -55,149 +57,165 @@
 
 
         <section class="about">
+            <div class="about-us">
+                <div class="about-txt">
             <h2>About the Podcast</h2>
             <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
                 We break down complex topics into digestible insights, explore productivity strategies that actually
                 work,
                 and share stories of personal growth from industry leaders.
-                <br><br>
+                <br><br><br>
                 Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
             </p>
+            </div>
             <div class="cards">
                 <div class="card">
                     <h2>150K+</h2>
                     <p>Monthly Listeners</p>
                 </div>
                 <div class="card">
-                    <h2>150K+</h2>
-                    <p>Monthly Listeners</p>
+                    <h2>200+</h2>
+                    <p>Episodes Published</p>
                 </div>
                 <div class="card">
-                    <h2>150K+</h2>
-                    <p>Monthly Listeners</p>
+                    <h2>4.9<span class="fa fa-star checked"></span></h2>
+                    <p>Average Rating</p>
                 </div>
                 <div class="card">
-                    <h2>150K+</h2>
-                    <p>Monthly Listeners</p>
+                    <h2>50+</h2>
+                    <p>Industry Experts</p>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="choose">
+            <div class="why-choose">
+                <h2>Why Choose TechWave</h2>
+                <div class="choose-cards">
+                    <div class="choose card">
+                        <img src="./assets/headphone.png" alt="">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.
+                        </p>
+                    </div>
+                    <div class="choose card">
+                        <img src="./assets/headphone.png" alt="">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.
+                        </p>
+                    </div>
+                    <div class="choose card">
+                        <img src="./assets/headphone.png" alt="">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.
+                        </p>
+                    </div>
+                    <div class="choose card">
+                        <img src="./assets/headphone.png" alt="">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.
+                        </p>
+                    </div>
+                    <div class="choose card">
+                        <img src="./assets/headphone.png" alt="">
+                        <h3>Premium Audio Quality</h3>
+                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="chooss">
-            <h2>Why Choose TechWave</h2>
-            <div class="choose-cards">
-                <div class="choose card">
-                    <img src="./assets/headphone.png" alt="">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
-                    </p>
-                </div>
-                <div class="choose card">
-                    <img src="./assets/headphone.png" alt="">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
-                    </p>
-                </div>
-                <div class="choose card">
-                    <img src="./assets/headphone.png" alt="">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
-                    </p>
-                </div>
-                <div class="choose card">
-                    <img src="./assets/headphone.png" alt="">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
-                    </p>
-                </div>
-                <div class="choose card">
-                    <img src="./assets/headphone.png" alt="">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
-                    </p>
-                </div>
-            </div>
-        </section>
+        <section class="featured-host">
+            <div class="episodes">
+                <div class="featured">
+                    <h2>Featured Episodes</h2>
+                    <div class="episodes">
+                        <div class="epi-card">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
+                                expect
+                                in
+                                the next decade.</p>
 
-        <section class="featured&host">
-            <div class="featured">
-                <h2>Featured Episodes</h2>
-                <div class="episodes">
-                    <div class="epi-card">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <h3>The Future of AI in Everyday Life</h3>
-                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect
-                            in
-                            the next decade.</p>
-
-                        <div class="time">
-                            <img src="./assets/clock.png" alt="">
-                            <p>42 min</p>
+                            <div class="time">
+                                <img src="./assets/clock.png" alt="">
+                                <p>42 min</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="epi-card">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <h3>The Future of AI in Everyday Life</h3>
-                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect
-                            in
-                            the next decade.</p>
+                        <div class="epi-card">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
+                                expect
+                                in
+                                the next decade.</p>
 
-                        <div class="time">
-                            <img src="./assets/clock.png" alt="">
-                            <p>42 min</p>
+                            <div class="time">
+                                <img src="./assets/clock.png" alt="">
+                                <p>42 min</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="epi-card">
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <h3>The Future of AI in Everyday Life</h3>
-                        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect
-                            in
-                            the next decade.</p>
+                        <div class="epi-card">
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to
+                                expect
+                                in
+                                the next decade.</p>
 
-                        <div class="time">
-                            <img src="./assets/clock.png" alt="">
-                            <p>42 min</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="host">
-                <h2>Meet the Host</h2>
-                <div class="host-details">
-                    <img src="./assets/host.png" alt="">
-                    <div class="alex">
-                        <h2>Alex Kumar</h2>
-                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
-                            industry for over 10 years, working with startups and Fortune 500 companies. Through
-                            TechWave, Alex shares insights from industry leaders and practical advice for anyone looking
-                            to grow in tech.</p>
-                        <div class="social">
-                            <img src="./assets/linkedin.png" alt="">
-                            <img src="./assets/x.png" alt="">
-                            <img src="./assets/instagram.png" alt="">
-                            <img src="./assets/youtube.png" alt="">
+                            <div class="time">
+                                <img src="./assets/clock.png" alt="">
+                                <p>42 min</p>
+                            </div>
                         </div>
                     </div>
                 </div>
 
+                <div class="host">
+                    <h2>Meet the Host</h2>
+                    <div class="host-details">
+                        <img src="./assets/host.png" alt="">
+                        <div class="alex">
+                            <h2>Alex Kumar</h2>
+                            <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
+                                industry for over 10 years, working with startups and Fortune 500 companies. Through
+                                TechWave, Alex shares insights from industry leaders and practical advice for anyone
+                                looking
+                                to grow in tech.</p>
+                            <div class="social">
+                                <img src="./assets/linkedin.png" alt="">
+                                <img src="./assets/x.png" alt="">
+                                <img src="./assets/instagram.png" alt="">
+                                <img src="./assets/youtube.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
