--- a/index.html
+++ b/index.html
@@ -54,15 +54,13 @@
     </header>
 
     <main>
-
-
         <section class="about">
             <div class="about-us">
                 <div class="about-txt">
             <h2>About the Podcast</h2>
-            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
                 We break down complex topics into digestible insights, explore productivity strategies that actually
-                work,
+                work,<br>
                 and share stories of personal growth from industry leaders.
                 <br><br><br>
                 Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
@@ -93,7 +91,7 @@
             <div class="why-choose">
                 <h2>Why Choose TechWave</h2>
                 <div class="choose-cards">
-                    <div class="choose card">
+                    <div class="choose-card one">
                         <img src="./assets/headphone.png" alt="">
                         <h3>Premium Audio Quality</h3>
                         <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
@@ -101,36 +99,28 @@
                             platforms.
                         </p>
                     </div>
-                    <div class="choose card">
-                        <img src="./assets/headphone.png" alt="">
-                        <h3>Premium Audio Quality</h3>
-                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                            engineering. Every episode is mastered for optimal listening across all devices and
-                            platforms.
+                    <div class="choose-card two">
+                        <img src="./assets/device.png" alt="">
+                        <h3>Mobile Friendly</h3>
+                        <p>Listen on the go with seamless mobile experience and offline downloads.
                         </p>
                     </div>
-                    <div class="choose card">
-                        <img src="./assets/headphone.png" alt="">
-                        <h3>Premium Audio Quality</h3>
-                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                            engineering. Every episode is mastered for optimal listening across all devices and
-                            platforms.
+                    <div class="choose-card three">
+                        <img src="./assets/location.png" alt="">
+                        <h3>Global Community</h3>
+                        <p>Connect with tech enthusiasts from over 120 countries worldwide.
                         </p>
                     </div>
-                    <div class="choose card">
-                        <img src="./assets/headphone.png" alt="">
-                        <h3>Premium Audio Quality</h3>
-                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                            engineering. Every episode is mastered for optimal listening across all devices and
-                            platforms.
+                    <div class="choose-card four">
+                        <img src="./assets/interview.png" alt="">
+                        <h3>Exclusive Interviews</h3>
+                        <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
                         </p>
                     </div>
-                    <div class="choose card">
-                        <img src="./assets/headphone.png" alt="">
-                        <h3>Premium Audio Quality</h3>
-                        <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                            engineering. Every episode is mastered for optimal listening across all devices and
-                            platforms.
+                    <div class="choose-card five">
+                        <img src="./assets/resource.png" alt="">
+                        <h3>Rich Resources</h3>
+                        <p>Access show notes, transcripts, and additional learning materials for every episode.
                         </p>
                     </div>
                 </div>
@@ -141,13 +131,15 @@
             <div class="episodes">
                 <div class="featured">
                     <h2>Featured Episodes</h2>
-                    <div class="episodes">
+                    <div class="episodes-card">
+
                         <div class="epi-card">
-                            <iframe width="560" height="315"
+                            <iframe 
                                 src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="crd-txt">
                             <h3>The Future of AI in Everyday Life</h3>
                             <p>Exploring how artificial intelligence is transforming our daily routines and what to
                                 expect
@@ -158,13 +150,16 @@
                                 <img src="./assets/clock.png" alt="">
                                 <p>42 min</p>
                             </div>
+                            </div>
                         </div>
+
                         <div class="epi-card">
-                            <iframe width="560" height="315"
+                            <iframe 
                                 src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="crd-txt">
                             <h3>The Future of AI in Everyday Life</h3>
                             <p>Exploring how artificial intelligence is transforming our daily routines and what to
                                 expect
@@ -175,13 +170,15 @@
                                 <img src="./assets/clock.png" alt="">
                                 <p>42 min</p>
                             </div>
+                            </div>
                         </div>
                         <div class="epi-card">
-                            <iframe width="560" height="315"
+                            <iframe 
                                 src="https://www.youtube.com/embed/LnrPppASOlE?si=0l2J5tcVtyr0o3qd"
                                 title="YouTube video player" frameborder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="crd-txt">
                             <h3>The Future of AI in Everyday Life</h3>
                             <p>Exploring how artificial intelligence is transforming our daily routines and what to
                                 expect
@@ -192,16 +189,19 @@
                                 <img src="./assets/clock.png" alt="">
                                 <p>42 min</p>
                             </div>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
 
                 <div class="host">
                     <h2>Meet the Host</h2>
                     <div class="host-details">
-                        <img src="./assets/host.png" alt="">
+                        <div class="alex-img">
+                        <img src="./assets/host.png" alt=""></div>
                         <div class="alex">
-                            <h2>Alex Kumar</h2>
+                            <h3>Alex Kumar</h3>
                             <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech
                                 industry for over 10 years, working with startups and Fortune 500 companies. Through
                                 TechWave, Alex shares insights from industry leaders and practical advice for anyone
@@ -241,9 +241,11 @@
                     <p>Spotify</p>
                 </div>
             </div>
-            <p>© 2026 TechWave Podcast. All rights reserved.</p>
+            <div class="footer-pera">
+            <p>© 2026 TechWave Podcast. All rights reserved.</p></div>
         </div>
     </footer>
+    
 </body>
 
 </html>
