responsive for mobile is done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <nav>
             <h2 class="logo"><span class="wht">Tech</span><span class="clr">Wave</span> </h2>
-            <ul>
+            <ul class="menu-item">
                 <a href="">
                     <li>About</li>
                 </a>
@@ -32,7 +32,8 @@
                     <li>Host</li>
                 </a>
             </ul>
-            <button class="btn">subscribe<i class="fa-solid fa-arrow-right-long"></i></button>
+            <button class="btn menu-btn">subscribe<i class="fa-solid fa-arrow-right-long"></i></button>
+            <button class="hamburger-menu"> <img src="./assets/hamburger-menu.png" alt=""></button> 
         </nav>
         <section class="hero">
             <div class="hero1">
@@ -229,23 +230,23 @@
                     <p>Spotify</p>
                 </div>
                 <div class="footer-icon">
-                    <img src="./assets/spotify.png" alt="">
-                    <p>Spotify</p>
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <p>Apple Podcasts</p>
                 </div>
                 <div class="footer-icon">
-                    <img src="./assets/spotify.png" alt="">
-                    <p>Spotify</p>
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <p>YouTube</p>
                 </div>
                 <div class="footer-icon">
-                    <img src="./assets/spotify.png" alt="">
-                    <p>Spotify</p>
+                    <img src="./assets/twitter.png" alt="">
+                    <p>Twitter</p>
                 </div>
             </div>
             <div class="footer-pera">
             <p>© 2026 TechWave Podcast. All rights reserved.</p></div>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
