all responsive design for both mobile and tablets are done including some simple animation

--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@
                             </div>
                         </div>
 
+                        <div class="epi-card card-hidden">
+                            <iframe src="https://www.youtube.com/embed/ZHCB09O6zUk?si=26ftX14VbxDAk8Xz&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="crd-txt">
+                                <h3>A Brief History of AI: From Gen AI to Agentic AI
+                                </h3>
+                                <p>AI didn’t happen overnight 🤖 — it’s been 70 years in the making. Jeff Crume traces the evolution of artificial intelligence from early programming to machine learning, generative AI, and agentic AI. Discover how decades of innovation shaped today’s intelligent systems.
+</p>
+
+                                <div class="time">
+                                    <img src="./assets/clock.png" alt="">
+                                    <p>13 min</p>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
